--- a/vivado/jtag/jtag.runs/synth_1/.vivado.begin.rst
+++ b/vivado/jtag/jtag.runs/synth_1/.vivado.begin.rst
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
 <ProcessHandle Version="1" Minor="0">
-    <Process Command="vivado" Owner="binhkieudo" Host="binhkieudo-asus" Pid="752582" HostCore="16" HostMemory="32262240">
+    <Process Command="vivado" Owner="binhkieudo" Host="binhkieudo" Pid="56573" HostCore="20" HostMemory="131581644">
     </Process>
 </ProcessHandle>
